--- a/projects.html
+++ b/projects.html
@@ -51,7 +51,7 @@
             <div class="content">
             <div id="large-header" class="large-header">
                 <canvas id="demo-canvas"></canvas>
-                <h1 class="main-title" id="text-flicker-in-glow"><span class="thin" >Stay</span> Tuned</h1>
+                <h1 class="main-title"><span class="thin" >Stay</span> Tuned</h1>
             </div>
             </div>
         </div>
