--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                     <a class='icon social in'href="https://www.instagram.com/joel_joshua._/"><i class='fa fa-instagram'></i></a>
                     <a class='icon social tw' href="https://twitter.com/joeljosh36"><i class='fa fa-twitter'></i></a>
                     <a class='icon social fb' href="https://www.facebook.com/joel.joshua.100/"><i class='fa fa-facebook'></i></a>
+                    <a class='icon social fb' href="mailto:jjpadippura123@gmail.com"><i class='fa fa-envelope'></i></a>
 
                   </div>  
                 </div>
