icons open to new window

--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
 
             <div class="row justify-content-center">
                 <div class='demopadding'>
-                    <a class='icon social in' href="https://github.com/joeljosh"><i class='fa fa-github' ></i></a>
-                    <a class='icon social in'href="https://www.instagram.com/joel_joshua._/"><i class='fa fa-instagram'></i></a>
-                    <a class='icon social tw' href="https://twitter.com/joeljosh36"><i class='fa fa-twitter'></i></a>
-                    <a class='icon social fb' href="https://www.facebook.com/joel.joshua.100/"><i class='fa fa-facebook'></i></a>
-                    <a class='icon social fb' href="mailto:jjpadippura123@gmail.com"><i class='fa fa-envelope'></i></a>
+                    <a class='icon social in' href="https://github.com/joeljosh" target="_blank" rel="noopener"><i class='fa fa-github' ></i></a>
+                    <a class='icon social in'href="https://www.instagram.com/joel_joshua._/" target="_blank" rel="noopener"><i class='fa fa-instagram'></i></a>
+                    <a class='icon social tw' href="https://twitter.com/joeljosh36" target="_blank" rel="noopener"><i class='fa fa-twitter'></i></a>
+                    <a class='icon social fb' href="https://www.facebook.com/joel.joshua.100/" target="_blank" rel="noopener"><i class='fa fa-facebook'></i></a>
+                    <a class='icon social fb' href="mailto:jjpadippura123@gmail.com" target="_blank" rel="noopener"><i class='fa fa-envelope'></i></a>
 
                   </div>  
                 </div>
