--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
                             <p>CSS      <i class="devicon-css3-plain-wordmark colored"></i></p>
                             <p>JS       <i class="devicon-javascript-plain colored"></i></p>
                             <p>Python   <i class="devicon-python-plain-wordmark colored"></i></p>
-                           <!--<p>React    <i class="devicon-react-original-wordmark colored"></i></p>--> 
+                            <p>React    <i class="devicon-react-original-wordmark colored"></i></p>
                             <br>
                             
                         
