--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
                                 <h4 class="font-yellow">B.Tech 1st year</h4>
                                 <ul class="information margin-tb-30">
                                     <li><b class="font-yellow">BORN</b> :April 7,2001</li>
-                                    <li><b class="font-yellow">EMAIL</b> : jjpadippura123@gmail.com</li>
+                                    <li><b class="font-yellow">EMAIL</b> : joeljoshua0704@gmail.com</li>
                                     
                                 </ul>
                                 
