--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <a class='icon social in'href="https://www.instagram.com/joel_joshua._/" target="_blank" rel="noopener"><i class='fa fa-instagram'></i></a>
                     <a class='icon social tw' href="https://twitter.com/joeljosh36" target="_blank" rel="noopener"><i class='fa fa-twitter'></i></a>
                     <a class='icon social fb' href="https://www.facebook.com/joel.joshua.100/" target="_blank" rel="noopener"><i class='fa fa-facebook'></i></a>
-                    <a class='icon social fb' href="mailto:jjpadippura123@gmail.com" target="_blank" rel="noopener"><i class='fa fa-envelope'></i></a>
+                    <a class='icon social fb' href="mailto:joeljosh0704@gmail.com" target="_blank" rel="noopener"><i class='fa fa-envelope'></i></a>
 
                   </div>  
                 </div>
