--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
                         
                         <div class="col-sm-8 col-md-5 col-lg-12" data-tilt>		
                                 <h2><b>Joel Joshua</b></h2>
-                                <h4 class="font-yellow">B.Tech 1st year</h4>
+                                <h4 class="font-yellow">B.Tech 2nd year</h4>
                                 <ul class="information margin-tb-30">
                                     <li><b class="font-yellow">BORN</b> :April 7,2001</li>
                                     <li><b class="font-yellow">EMAIL</b> : joeljoshua0704@gmail.com</li>
